[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-vertex-vector-utilities"
version = "0.1.0"
description = "Vector search utilities for Google Cloud Vertex AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-cloud-aiplatform>=1.120.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/google_vertex_vector_utilities"]
